--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -46,7 +46,7 @@
     align-items: center;
     background: #a19b9b;
     background-image: url('Hero-BG-PA.avif');
-    background-size: 100% 650px;
+    background-size: 100% calc(100vh - 90px);
     background-repeat: no-repeat;
 }
 
@@ -59,7 +59,7 @@
     width: 100%;
     height: calc(100vh - 90px);
     -webkit-user-drag: none;
-    -webkit-user-select: none;
+    user-select: none;
 }
 
 
@@ -69,6 +69,7 @@
 
 /* form control */
 .form-control {
+    
     margin: 10px 0;
     display: flex;
     flex-direction: column;
