--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,12 @@
 <%- include('./layouts/head.ejs') %>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     </head>
 <body>
     <%- include('./layouts/navbar.ejs') %>
     <main class="main-content">
         <section class="main-intro">
                 <article>
-                    <img src="./u6eewgjm.png" alt="Nothing">
+                    <img src="./Images/u6eewgjm.png" alt="Nothing">
                 </article>
                 <article>
                     <div class="form-control">
