--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <ul class="navbar-list">
             <li class="navbar-item ">
-                <img src="./download.png" id="brand-logo" width="120px" height="80px" alt="EssenceFlow">
+                <img src="./Images/download.png" id="brand-logo" width="120px" height="80px" alt="EssenceFlow">
             </li>
         </ul>
         <ul class="navbar-list">
