--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -9,5 +9,5 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <title>Welcome</title>
