--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,67 +1,74 @@
 <%- include('./layouts/head.ejs') %>
 
-<link rel="stylesheet" href="./CSS/registration.css">
-<link rel="stylesheet" href="./CSS/form-styles.css">
+    <link rel="stylesheet" href="./CSS/registration.css">
+    <link rel="stylesheet" href="./CSS/form-styles.css">
 
-</head>
-<body>
+    </head>
 
-<%- include('./layouts/navbar.ejs') %>
-<main>
-    <form action="" method="post"  class="form-control" data-path="<%= path %>" onsubmit="return validateForm()">
-        <h1>
-            <%= path == "/login" ? "Login" : "" %>
-        </h1>
-        <h1>
-            <%= path == "/register" ? "Register Now" : "" %>
-        </h1>
-        
-        <% if (path == '/register') { %> 
-            <div class="form-item">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <span class="error-message" id="email-error"></span>
-            </div>
-        <% } %>
+    <body>
 
-        <div class="form-item">
-            <label for="username"><%= path == '/login' ? "Username or Email" : "Username" %></label>
-            <input type="text" id="username" name="username" required>
-            <span class="error-message" id="username-error"></span>
-        </div>
-        
-        <div class="form-item">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-            <span class="error-message" id="password-error"></span>
-        </div>
+        <%- include('./layouts/navbar.ejs') %>
+            <main>
+                <form action="" method="post" class="form-control" data-path="<%= path %>"
+                    onsubmit="return validateForm()">
+                    <h1>
+                        <%= path=="/login" ? "Login" : "" %>
+                    </h1>
+                    <h1>
+                        <%= path=="/register" ? "Register Now" : "" %>
+                    </h1>
 
-        <% if (path == '/register') { %> 
-            <div class="form-item">
-                <label for="con-password">Confirm Password</label>
-                <input type="password" id="con-password" name="con-password" required>
-                <span class="error-message" id="confirm-password-error"></span>
-            </div>
-        <% } %>
+                    <% if (path=='/register' ) { %>
+                        <div class="form-item">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                            <span class="error-message" id="email-error"></span>
+                        </div>
+                        <% } %>
 
-        <input type="submit" value="<%= path == '/login' ? 'Login' : 'Register' %>">
-        
-        <p>Already have an account? 
-            <a href="<%= path == '/login' ? '/register' : '/login' %>">
-                <%= path == '/register' ? "Login" : "Register" %>
-            </a>
-        </p>
-        
-        <hr width="100%">
-        <p>or</p>
-        <p><%= path == '/login' ? "Login" : "Register" %> Using</p>
+                            <div class="form-item">
+                                <label for="username">
+                                    <%= path=='/login' ? "Username or Email" : "Username" %>
+                                </label>
+                                <input type="text" id="username" name="username" required>
+                                <span class="error-message" id="username-error"></span>
+                            </div>
 
-        <div class="social-link">
-            <button type="button">Google</button>
-            <button type="button">Facebook</button>
-        </div>
-    </form>
-</main>
-<script src="form-validation.js"></script>
-</body>
-</html>
+                            <div class="form-item">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password" required>
+                                <span class="error-message" id="password-error"></span>
+                            </div>
+
+                            <% if (path=='/register' ) { %>
+                                <div class="form-item">
+                                    <label for="con-password">Confirm Password</label>
+                                    <input type="password" id="con-password" name="con-password" required>
+                                    <span class="error-message" id="confirm-password-error"></span>
+                                </div>
+                                <% } %>
+
+                                    <input type="submit" value="<%= path == '/login' ? 'Login' : 'Register' %>">
+
+                                    <p>Already have an account?
+                                        <a href="<%= path == '/login' ? '/register' : '/login' %>">
+                                            <%= path=='/register' ? "Login" : "Register" %>
+                                        </a>
+                                    </p>
+
+                                    <hr width="100%">
+                                    <p>or</p>
+                                    <p>
+                                        <%= path=='/login' ? "Login" : "Register" %> Using
+                                    </p>
+
+                                    <div class="social-link">
+                                        <button type="button">Google</button>
+                                        <button type="button">Facebook</button>
+                                    </div>
+                </form>
+            </main>
+            <script src="form-validation.js"></script>
+    </body>
+
+    </html>
