--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -18,22 +18,19 @@
                         <%= path=="/register" ? "Register Now" : "" %>
                     </h1>
 
+
+                    <div class="form-item">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                        <span class="error-message" id="email-error"></span>
+                    </div>
                     <% if (path=='/register' ) { %>
                         <div class="form-item">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required>
-                            <span class="error-message" id="email-error"></span>
+                            <label for="fullname">Full Name </label>
+                            <input type="text" id="username" name="username" required>
+                            <span class="error-message" id="username-error"></span>
                         </div>
                         <% } %>
-
-                            <div class="form-item">
-                                <label for="username">
-                                    <%= path=='/login' ? "Username or Email" : "Username" %>
-                                </label>
-                                <input type="text" id="username" name="username" required>
-                                <span class="error-message" id="username-error"></span>
-                            </div>
-
                             <div class="form-item">
                                 <label for="password">Password</label>
                                 <input type="password" id="password" name="password" required>
