this comit includes the project and task creation

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -27,7 +27,7 @@
                     <% if (path=='/register' ) { %>
                         <div class="form-item">
                             <label for="fullname">Full Name </label>
-                            <input type="text" id="username" name="username" required>
+                            <input type="text" id="username" name="fullname" required>
                             <span class="error-message" id="username-error"></span>
                         </div>
                         <% } %>
