Commit the changes

--- a/views/dashboard/sidebar.ejs
+++ b/views/dashboard/sidebar.ejs
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/CSS/sidebar.css">
-</head>
-<body>
-    <section class="sidebar">
-    
-    </section>
-</body>
-</html>
+<section class="sidebar">
+    <ul class="sidebar-items">
+        <li class="sidebar-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="sidebar-item"><a href="/projects">My projects</a></li>
+        <li class="sidebar-item"><a href="/teams">Teams</a></li>
+        <li class="sidebar-item"><a href="/reports">reports</a></li>
+        <li class="sidebar-item"><a href="/calender">Calender</a></li>
+        <li class="sidebar-item"><a href="/support">Help & Support</a></li>
+        <li class="sidebar-item"><a href="/settings">Settings</a></li>
+    </ul>
+</section>
