--- a/public/CSS/sidebar.css
+++ b/public/CSS/sidebar.css
@@ -3,12 +3,62 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    background: #000;
-}
-.sidebar{
-    width: 400px;
-    height: 100vh;
-    background: gray;
 
+.sidebar{
+    position:fixed;
+    top: 80px;
+    left: 0;
+    width: 250px;
+    height:calc(100vh - 80px);
+background: whitesmoke; 
+   display: flex;
+}
+.sidebar .sidebar-items{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    list-style-type: none;
+
+
+}
+.sidebar .sidebar-items li a{
+ text-decoration: none;
+}
+.sidebar .sidebar-items li {
+    width: 100%;
+    padding: 20px 0px;
+    padding-left:40px;
+    border-radius: 20px;
+}
+.sidebar .sidebar-items .sidebar-item:hover{
+    background: #c5bfbf;
+}
+
+main{
+    position: relative;
+    width: 100%;
+}
+main .main-content{
+    position:absolute;
+    top:100px;
+    left:300px;
+    width: calc(100% - 300px);
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.project-card{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
+    background: rgb(152, 152, 254);
+    border-radius: 30px;
+    padding: 30px;
 }
