--- a/views/dashboard/sidebar.ejs
+++ b/views/dashboard/sidebar.ejs
@@ -1,6 +1,6 @@
 <section class="sidebar">
     <ul class="sidebar-items">
-        <li class="sidebar-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="sidebar-item <%= (path =='/dashboard')?'active':'' %>"><a href="/dashboard">Dashboard</a></li>
         <li class="sidebar-item"><a href="/projects">My projects</a></li>
         <li class="sidebar-item"><a href="/teams">Teams</a></li>
         <li class="sidebar-item"><a href="/reports">reports</a></li>
