--- a/public/CSS/dash-nav.css
+++ b/public/CSS/dash-nav.css
@@ -5,7 +5,7 @@
 
 .navbar {
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 80px;
@@ -24,7 +24,7 @@
 
 .brand-logo {
   text-decoration: none;
-  list-style-type: none
+  list-style-type: none;
 }
 
 .navbar-center {
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap :30px;
+  gap: 30px;
   font-size: 20px;
 }
 
@@ -63,13 +63,11 @@ button:hover {
   opacity: 0.8;
 }
 
-
 .user-profile {
   position: relative;
   display: flex;
   align-items: center;
 }
-
 
 .user-profile:hover .dropdown-menu {
   display: block;
