--- a/public/CSS/registration.css
+++ b/public/CSS/registration.css
@@ -1,81 +1,79 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .form-control {
-    max-width: 400px;
-    width: 80%;
-    margin: 10px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    place-items: center;
-    padding: 10px 10px;
-    border: 2px solid gray;
-    backdrop-filter: blur(20px);
-    color: white;
+  max-width: 400px;
+  width: 80%;
+  margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  place-items: center;
+  padding: 10px 10px;
+  border: 2px solid gray;
+  backdrop-filter: blur(20px);
+  color: white;
 }
 
 .form-control input {
-    height: 40px;
-    /* border-radius: 8px; */
-    outline: none;
-    padding: 0 10px;
-    border: none;
-    width: 100%;
-    border-bottom: 2px solid gold;
-    background: rgba(203, 199, 199, 0.5);
+  height: 40px;
+  /* border-radius: 8px; */
+  outline: none;
+  padding: 0 10px;
+  border: none;
+  width: 100%;
+  border-bottom: 2px solid gold;
+  background: rgba(203, 199, 199, 0.5);
 }
 
 .form-control input:focus {
-    border-bottom: 2px solid greenyellow;
+  border-bottom: 2px solid greenyellow;
 }
 
-.form-control input[type='submit'] {
-    width: 40%;
-    height: 40px;
-    background: #f96d00;
-    cursor: pointer;
-    border-radius: 8px;
-    box-shadow: 2px 4px 5px grey;
-
+.form-control input[type="submit"] {
+  width: 40%;
+  height: 40px;
+  background: #f96d00;
+  cursor: pointer;
+  border-radius: 8px;
+  box-shadow: 2px 4px 5px grey;
 }
 
 .form-item {
-    height: max-content;
-    display: flex;
-    flex-direction: column;
-    width: 80%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
 }
 
 .social-link {
-    display: flex;
-    width: 80%;
-    gap: 10px;
+  display: flex;
+  width: 80%;
+  gap: 10px;
 }
 
 button {
-    width: 100%;
-    height: 40px;
-    background: whitesmoke;
-    cursor: pointer;
-    box-shadow: 2px 4px 5px grey;
+  width: 100%;
+  height: 40px;
+  background: whitesmoke;
+  cursor: pointer;
+  box-shadow: 2px 4px 5px grey;
 }
 
 main {
-    display: flex;
-    place-items: center;
-    place-content: center;
-    height: calc(100vh - 90px);
-    background-image: url('/Images/bg-image-registration.jpg');
-    background-size: 100% calc(100vh - 90px);
-
+  display: flex;
+  place-items: center;
+  place-content: center;
+  height: calc(100vh - 90px);
+  background-image: url("/Images/bg-image-registration.jpg");
+  background-size: 100% calc(100vh - 90px);
 }
 
 .error-message {
-    color: red;
-    font-size: 0.9em;
-    margin-top: 5px;
+  color: red;
+  font-size: 0.9em;
+  margin-top: 5px;
 }
