--- a/views/dashboard/navbar.ejs
+++ b/views/dashboard/navbar.ejs
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <div class="navbar-left">
           <a href="#" class="brand-logo"><li class="navbar-item ">
-            <img src="./Images/download.png" id="brand-logo" width="120px" height="80px" alt="EssenceFlow">
+            <img src="/Images/download.png" id="brand-logo" width="120px" height="80px" alt="EssenceFlow">
         </li></a>
         </div>
         
@@ -14,11 +14,11 @@
         </div>
         
         <div class="navbar-right">
-          <form action="/dashboard/create" method="post">
-            <button class="add-icon" aria-label="add-project">
-              <i class="fa-solid fa-plus" style="color: #005eff;"></i> New Project
-            </button>
-          </form>
+            <a href="/dashboard/create">
+              <button class="add-icon" >
+                <i class="fa-solid fa-plus" style="color: #005eff;"></i> New Project
+              </button>
+            </a>          
          
           <!-- Calendar Icon -->
           <button class="calendar-icon" aria-label="Calendar">
