--- a/views/dashboard/projects.ejs
+++ b/views/dashboard/projects.ejs
@@ -1,35 +1,56 @@
-<% if (projects.length > 0) { %>
-    <% projects.forEach(project => { %>
+<% if (path=='/dashboard' ) { %>
+  <% if (projects.length> 0) { %>
+    <% projects.forEach(project=> { %>
       <div class="project-card">
-        <h2 class="project-title">Project Title: <%= project.title %></h2>
+        <h2 class="project-title">Project Title: <%= project.title %>
+        </h2>
 
         <!-- Project Status -->
         <p class="project-status <%= project.status === 'ongoing' ? 'status-ongoing' : 'status-finished' %>">
-        <%= project.status %>
+          <%= project.status %>
         </p>
 
-        <p class="project-description"><%= project.description %></p>
-        <p class="project-tasks">Total Tasks Completed: <%= project.completedTasks %></p>
+        <p class="project-description">
+          <%= project.description %>
+        </p>
+        <p class="project-tasks">Total Tasks Completed: <%= project.completedTasks %>
+        </p>
 
         <!-- Team Members -->
         <div class="team-members">
           <h3>Team Members:</h3>
           <ul>
-            <% project.team.slice(0, 2).forEach(member => { %>
-              <li><%= member.email %> (<%= member.role %>)</li>
-            <% }); %>
+            <% project.team.slice(0, 2).forEach(member=> { %>
+              <li>
+                <%= member.email %> (<%= member.role %>)
+              </li>
+              <% }); %>
           </ul>
-          <% if (project.team.length > 2) { %>
+          <% if (project.team.length> 2) { %>
             <p>and <%= project.team.length - 2 %> more...</p>
-          <% } %>
+            <% } %>
         </div>
 
         <!-- View Project Button -->
         <div class="view-button">
           <a href="/projects/<%= project._id %>" class="btn-view">View Project</a>
         </div>
+
+        <% if (project.team.length>1){ %>
+          <% project.team.forEach(member=> { %>
+            <% if (member.email==owner && member.role=='owner' ){ %>
+              <form action="/dashboard/<%=project._id%>/edit" method="post" class="edit-form">
+                <button class="edit-project"> Edit</button>
+              </form>
+              <form action="/dashboard/<%=project._id%>/delete" method="post" class="delete-form">
+                <button class="delete-project"> Delete</button>
+              </form>
+              <% }%>
+                <% }); %>
+                  <% }%>
       </div>
-    <% }); %>
-  <% } else { %>
-    <p>No projects found. </p>
-  <% } %>
+      <% }); %>
+        <% } else { %>
+          <p>No projects found. </p>
+          <% } %>
+            <% } %>
