--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -10,5 +10,5 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
         <script src="https://kit.fontawesome.com/428db7e607.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
     <title><%= title %></title>
