--- a/views/dashboard/navbar.ejs
+++ b/views/dashboard/navbar.ejs
@@ -30,11 +30,11 @@
             <i class="fa-solid fa-handshake-angle" style="color: #005eff;"></i> Support
           </button>
       
-          <!-- Theme Switcher Icon -->
+          <!-- Theme Switcher Icon
           <button class="theme-switcher" aria-label="Theme Switcher" > 
             <i class="fa-solid fa-moon" style="color: #005eff;"></i> Light
           </button>
-      
+       -->
           <!-- User Profile Icon -->
           <div class="user-profile">
             <i class="fa-solid fa-user" style="color: #005eff;"></i> Profile    
