--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -10,10 +10,10 @@
                 <a href="/">Home</a>
             </li>
             <li class="navbar-item">
-                <a href="/features">Features</a>
+                <a href="#features">Features</a>
             </li>
             <li class="navbar-item">
-                <a href="/pricing">Pricing</a>
+                <a href="#pricing">Pricing</a>
             </li>
             <li class="navbar-item">
                 <a href="/about">About Us</a>
@@ -26,6 +26,6 @@
             <li class="navbar-item">
                 <a href="/register">Register</a>
             </li>
-        </ul>
+        </ul> 
     </nav>
 </header>
