--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -46,7 +46,7 @@
   align-items: center;
   background: #a19b9b;
   background-image: url("/Images/Hero-BG-PA.avif");
-  background-size: 100% calc(100vh - 90px);
+  background-size: 100% calc(100vh - 80px);
   background-repeat: no-repeat;
 }
 
@@ -97,4 +97,30 @@
 
 #brand-name {
   font-family: cursive;
+}
+
+main>section{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  min-height: fit-content;
+}
+main>#features{
+  background-image: url('/Images/Bg-1.jpeg');
+  background-size:  100% 100vh;
+  background-repeat: no-repeat;
+}
+main>#features .features{
+  align-items: start;
+}
+main>#features .features h2{
+padding: 20px 60px;
+}
+#pricing{
+  background-image: url('/Images/Bg-2.jpeg');
+  background-size:  100% 100vh;
+  background-repeat: no-repeat;
 }
