--- a/public/CSS/sidebar.css
+++ b/public/CSS/sidebar.css
@@ -13,6 +13,10 @@
   background: whitesmoke;
   display: flex;
 }
+.collapse{
+  width:50px;
+  overflow: hidden;
+}
 
 .sidebar .sidebar-items {
   display: flex;
@@ -43,6 +47,18 @@
   background: #c5bfbf;
 }
 
+
+
+.sidebar .sidebar-items li.collapse-expand{
+  position: absolute;
+  top: 0;
+  right: -15px;
+  border-radius: 0px;
+  max-width: 15px;
+  background: #d3d0d0;
+  padding: 0;
+  font-size: 2rem;
+}
 main {
   position: relative;
   width: 100%;
@@ -56,8 +72,11 @@ main .main-content {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 30px;
   justify-content: center;
+  
 }
 
 .project-card {
@@ -71,10 +90,15 @@ main .main-content {
   padding: 20px;
   margin: 16px 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  background-color: rgba(56, 199, 221,0.5);
   position: relative;
 }
-
+.new-project{
+  height: fit-content;
+  max-width: calc(100% - 20%);
+  max-height: calc(100vh - 10%);
+  flex-shrink: 1;
+}
 .project-title {
   font-size: 1.5em;
   margin-bottom: 8px;
@@ -140,12 +164,11 @@ main .main-content {
   background-color: #0056b3;
 }
 
-
-.delete-project,.edit-project
-{
-  position:absolute;
+.delete-project,
+.edit-project{
+  position: absolute;
   top: 8px;
-  right:10px;
+  right: 10px;
   width: 50px;
   height: 20px;
   border-radius: 5px;
@@ -153,17 +176,63 @@ main .main-content {
   color: white;
   font-size: small;
 }
-.edit-project{
+
+.edit-project {
   top: 8px;
-  right:70px;
+  right: 70px;
   background: rgb(7, 120, 226);
 
 }
-.delete-form,.edit-form{
+
+.delete-form,
+.edit-form {
   display: none;
 }
 
 .project-card:hover .edit-form,
-.project-card:hover .delete-form{
-  display:flex;
+.project-card:hover .delete-form {
+  display: flex;
+}
+
+
+.project-card .project-create-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.project-create-form .project-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-create-form input {
+  height: 40px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid grey;
+  background: white;
+}
+
+.project-create-form button {
+  max-width: 200px;
+  padding: 0.7rem;
+  background: #6fffa6;
+  place-self: center;
+}
+
+
+.start-task{
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  background:green;
+  color: white;
+  font-size: small;
 }
