--- a/views/dashboard/newProject.ejs
+++ b/views/dashboard/newProject.ejs
@@ -1,6 +1,7 @@
-<section class="project-card">
-
-    <form action="/dashboard/create" method="post">
+<section class="project-card new-project">
+    <form action="/dashboard/create" method="post" class="project-create-form">
+        
+        <h1 style="text-align: center; font-size: larger; margin:10px 0px 20px 0px">Create A New Project</h1>
         <div class="project-content">
             <label for="title">Title :</label>
             <input type="text" name="title" id="title" required>
@@ -15,7 +16,7 @@
         </div>
         <div class="project-content">
             <label for="members">Members :</label>
-            <input type="email" name="members" id="members" multiple required>
+            <input type="text" name="members" id="members" required>
         </div>
         <button type="submit">Create Project</button>
 
